--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <img src="./assets/FES.svg" class="logo" alt="" />
         <ul>
           <li><a href="#about">About</a></li>
-          <li><a href="#Discord">Discord</a></li>
-          <li><a href="#Contact">Contact</a></li>
+          <li><a href="#discord">Discord</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
       <header>
